--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./Assets/bowtie-cat.png" alt="">
+    <img src="./assets/bowtie-cat.png" alt="">
 </body>
 </html>
